--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -19,5 +19,11 @@
 			"service": "S3AndCloudFront",
 			"providerPlugin": "awscloudformation"
 		}
+	},
+	"storage": {
+		"6toimages": {
+			"service": "S3",
+			"providerPlugin": "awscloudformation"
+		}
 	}
 }
